# aime-workflow

./: .env_copy  .gitignore  LICENSE  README.md  actor.py  config.py  factory.py  final_report.md  llm_client.py  main.py  planner.py  progress_manager.py  pyproject.toml  tools.py  utils.py
aime/: __init__.py  actor.py  factory.py  llm_client.py  main.py  planner.py  progress_manager.py  tools.py
task_results/: task_0_result.md  task_10_result.md  task_11_result.md  task_1_result.md  task_2_result.md  task_3_result.md  task_4_result.md  task_5_result.md  task_6_result.md  task_7_result.md  task_8_result.md  task_9_result.md
